--- a/style.css
+++ b/style.css
@@ -1,14 +1,10 @@
-body {
-  background: #c2f3ed;
-}
-
 .jumbotron {
-  padding-top: 4rem;
-  background-color: white;
+  padding-top: 5rem;
+  background-color: #e2edff;
 }
 
 #galeri {
-  background-color: white;
+  background-color: #e2edff;
 }
 
 section {
