--- a/style.css
+++ b/style.css
@@ -7,7 +7,12 @@
   overflow: hidden;
 }
 
-#sosmed {
+#project {
+  background-color: #e2edff;
+  overflow: hidden;
+}
+
+#kontak {
   background-color: #e2edff;
   overflow: hidden;
 }
