--- a/style.css
+++ b/style.css
@@ -8,6 +8,14 @@
 }
 
 #project {
+  overflow: hidden;
+}
+
+#sosmed {
+  overflow: hidden;
+}
+
+#project {
   background-color: #e2edff;
   overflow: hidden;
 }
